Unhardcoded, image resize, hexaghost

--- a/src/chronometry/resources/SlayTheStreamer/localizations/eng/uiStrings.json
+++ b/src/chronometry/resources/SlayTheStreamer/localizations/eng/uiStrings.json
@@ -9,7 +9,11 @@
               "s left.",
               "Voting on boss ended... chose ",
               "Voting on Neow's bonus ended... chose ",
-              "Chat vs. "
+              "Chat vs. ",
+              "Choose the Worst Boss Relic",
+              "Voting on relic ended... chose ",
+              "Choose ",
+              " cards to start with."
             ]
   }
 }
