--- a/src/chronometry/resources/SlayTheStreamer/localizations/rus/uiStrings.json
+++ b/src/chronometry/resources/SlayTheStreamer/localizations/rus/uiStrings.json
@@ -9,7 +9,11 @@
               " сек.",
               "Голосование за босса окончено... Выбор чата: ",
               "Голосование за бонус Ньяу окончено... Выбор чата: ",
-              "Чат против "
+              "Чат против ",
+              "Выберите худшую реликвию босса",
+              "Голосование за реликвию босса окончено... Выбор чата: ",
+              "Выберите ",
+              " карт, с которыми хотите начать."
             ]
   }
 }
